@@ -1,3 +1,9 @@
+2002-04-29  Elena Zannoni  <ezannoni@redhat.com>
+
+	* hpread.c (DNTT_TYPE_VECTOR): Rename from TYPE_VECTOR.
+	(DNTT_TYPE_VECTOR_LENGTH): Rename from TYPE_VECTOR_LENGTH.
+	(hpread_symfile_init, hpread_lookup_type): Substitute throughout.
+
 2002-04-29  Kevin Buettner  <kevinb@redhat.com>
 
 	From Louis Hamilton <hamilton@redhat.com>:
